--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 10-14-04: Added High jobs to @who2. [Tsusai]
- 10-14-04: Fixed GM_JOB to display new job number correctly. [Tsusai]
- 10-14-04: JCon: Fixed High Job display and saving. [Tsusai]
- 10-14-04: Modified @who, @who2 and @who3 to accept matchtext and show GM levels. [Trihan]
- 10-14-04: Retabbed script.pas & added NPC command 'gstore' (guild storage). [Tsusai]
- 10-13-04: Fixed index out of bounds errors with @kickall, @raise, @raisemap, @doom. [Trihan]
- 10-13-04: Fixed an error in #autoloot that made it activate #auto instead. [Trihan]
- 10-13-04: Added @save, @load, @kick, @kickall, @raise, @raisemap. [Trihan]
- 10-13-04: Fixed a problem with Tiko's @doom. (GM_ATHENA_ITEM instead of GM_ATHENA_DOOM). [Trihan]
- 10-13-04: REED: Restructured Party saving. [AlexKreuz]
- 10-13-04: REED: Restructured Pet saving. [AlexKreuz]
- 10-13-04: Added @save, @load, @kick, @kickall, @raise, @raisemap. [Trihan]
- 10-13-04: Fixed a problem with Tiko's @doom. (GM_ATHENA_ITEM instead of GM_ATHENA_DOOM). [Trihan]
- 10-12-04: Added a DNS Updater timer. Default is off. [Tsusai]
- 10-12-04: JCon: Inventory work, can view cart and storage (all read-only). [Tsusai]
- 10-10-04: REED: Fixed minor problem with REED conversion. [AlexKreuz]
- 10-07-04: REED: Restructured Characters (2/2) Saving procedures. [AlexKreuz]
- 10-06-04: More Inventory tab work. [Tsusai]
- 10-06-04: Replaced CharacterItem with tc. Let's try to follow existing standards. [AlexKreuz]
- 10-06-04: REED: Restructured Characters (1/2) Saving procedures. [AlexKreuz]
- 10-05-04: Undefined stringlists clearing on close caused crashes. [AlexKreuz]
- 10-05-04: JCon: Cleaned my mess & Inventory work. [Tsusai]
- 10-05-04: REED: Restructured Account Saving procedures. [AlexKreuz]